added home page form

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,59 @@ eleventyNavigation:
 </section>
 
 <!-- ============================================ -->
+<!--                   Contact                    -->
+<!-- ============================================ -->
+
+<section id="contact-983">
+    <div class="cs-container">
+        <div class="cs-content">
+            <span class="cs-topper">Free Consultation</span>
+            <h2 class="cs-title">How Much Will My Home Rent For?</h2>
+            <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
+        </div>
+        <!--Form-->
+        <form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify>
+            <label class="cs-label">
+                First Name
+                <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
+            </label>
+            <label class="cs-label">
+                Last Name
+                <input class="cs-input" required type="text" id="name-587-983" name="Last Name" placeholder="Last Name">
+            </label>
+            <label class="cs-label">
+                Email
+                <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
+            </label>
+            <label class="cs-label">
+                Phone Number
+                <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
+            </label>
+            <label class="cs-label">
+            </br>
+                Property Address
+                <input class="cs-input" required type="text" id="address-587-983" name="Property Address" placeholder="Your Property Address">
+            </label>
+            <label class="cs-label cs-message">
+                Tell Us About Your Property
+                <textarea class="cs-input cs-textarea" required name="Address" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+            </label>
+            <div class="cs-wrapper">
+                <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
+            </div>
+        </form>
+    </div>
+    <!--Background Image-->
+    <picture class="cs-background">
+        <!--Mobile Image-->
+        <source media="(max-width: 600px)" srcset="/assets/images/rental-estimate-m.webp">
+        <!--Tablet and above Image-->
+        <source media="(min-width: 601px)" srcset="/assets/images/rental-estimate.webp">
+        <img loading="lazy" decoding="async" src="/assets/images/rental-estimate.webp" alt="hair salon" width="2500" height="770">
+    </picture>
+</section>
+
+<!-- ============================================ -->
 <!--                   Reviews                    -->
 <!-- ============================================ -->
 
@@ -281,19 +334,19 @@ eleventyNavigation:
                 <img loading="lazy" decoding="async" src="assets/images/why-choose1.webp" alt="people outside" width="306" height="360">
             </picture>
             <picture class="cs-picture cs-picture2">
-                <source media="(max-width: 600px)" srcset="assets/images/why-choose2-m.png">
-                <source media="(min-width: 601px)" srcset="assets/images/why-choose2.png">
-                <img loading="lazy" decoding="async" src="assets/images/why-choose2.png" alt="people outside" width="306" height="360">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose2-m.webp">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose2.webp">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose2.webp" alt="people outside" width="306" height="360">
             </picture>
             <picture class="cs-picture cs-picture3">
-                <source media="(max-width: 600px)" srcset="assets/images/why-choose3-m.png">
-                <source media="(min-width: 601px)" srcset="assets/images/why-choose3-m.png">
-                <img loading="lazy" decoding="async" src="assets/images/why-choose3-m.png" alt="person gardening" width="306" height="360">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose3-m.webp">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose3-m.webp">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose3-m.webp" alt="person gardening" width="306" height="360">
             </picture>
             <picture class="cs-picture cs-picture4">
-                <source media="(max-width: 600px)" srcset="assets/images/why-choose4-m.png">
-                <source media="(min-width: 601px)" srcset="assets/images/why-choose4-m.png">
-                <img loading="lazy" decoding="async" src="assets/images/why-choose4-m.png" alt="urban environment in green" width="306" height="360">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose4-m.webp">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose4-m.webp">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose4-m.webp" alt="urban environment in green" width="306" height="360">
             </picture>
         </div>
         <div class="cs-content">
