hid utility set up page

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 title: 'Contact'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/map.png'
 permalink: 'contact/'
 ---
 
@@ -148,10 +148,10 @@ permalink: 'contact/'
     <a href="https://maps.app.goo.gl/3u6wYUjSyFbRuw4p8" target="_blank" style="display: block;">
       <picture class="cs-background">
         <!-- Mobile Image -->
-        <source media="(max-width: 600px)" srcset="/assets/images/map-m.png">
+        <source media="(max-width: 600px)" srcset="/assets/images/map-m.webp">
         <!-- Tablet and above Image -->
-        <source media="(min-width: 601px)" srcset="/assets/images/map.png">
-        <img loading="lazy" decoding="async" src="/assets/images/map.png" alt="map" width="1280" height="600" style="width: 100%; height: auto; display: block;">
+        <source media="(min-width: 601px)" srcset="/assets/images/map.webp">
+        <img loading="lazy" decoding="async" src="/assets/images/map.webp" alt="map" width="1280" height="600" style="width: 100%; height: auto; display: block;">
       </picture>
     </a>
   </section>                                                   
