--- a/src/content/pages/tempe-utilities.html
+++ b/src/content/pages/tempe-utilities.html
@@ -1,7 +1,7 @@
 ---
 title: 'Tempe Utilities'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'tempe-utilities/'
 eleventyNavigation:
     key: Tempe Utilities
@@ -43,9 +43,9 @@ eleventyNavigation:
                     <a href="https://libertyutilities.com/" target="_blank" class="cs-link">Set Up Service</a>
                 </div>
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/water-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/water.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/water.png" alt="leaf" width="345" height="428">
+                    <source media="(max-width: 600px)" srcset="/assets/images/water-m.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/water.webp">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/water.webp" alt="leaf" width="345" height="428">
                 </picture>
             </li>
             <li class="cs-item">
@@ -58,9 +58,9 @@ eleventyNavigation:
                     <a href="https://www.aps.com/en/Residential/Home" target="_blank" class="cs-link">Set Up Service</a>
                 </div>
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/electric-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/electric.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/electric.png" alt="grass" width="345" height="428">
+                    <source media="(max-width: 600px)" srcset="/assets/images/electric-m.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/electric.webp">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/electric.webp" alt="grass" width="345" height="428">
                 </picture>
             </li>
             <li class="cs-item">
@@ -73,9 +73,9 @@ eleventyNavigation:
                     <a href="https://www.goodyearaz.gov/government/departments/finance/utilities-customer-service/start-service" target="_blank" class="cs-link">Set Up Service</a>
                 </div>
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/trash-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/trash.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/trash.png" alt="leaves" width="345" height="428">
+                    <source media="(max-width: 600px)" srcset="/assets/images/trash-m.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/trash.webp">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/trash.webp" alt="leaves" width="345" height="428">
                 </picture>
             </li>
             <li class="cs-item">
@@ -88,9 +88,9 @@ eleventyNavigation:
                     <a href="https://www.swgas.com/" target="_blank" class="cs-link">Set Up Service</a>
                 </div>
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/gas-m.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/gas.png">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/gas.png" alt="path" width="345" height="428">
+                    <source media="(max-width: 600px)" srcset="/assets/images/gas-m.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/gas.webp">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/gas.webp" alt="path" width="345" height="428">
                 </picture>
             </li>
         </ul>
