--- a/src/content/pages/tenants.html
+++ b/src/content/pages/tenants.html
@@ -1,7 +1,7 @@
 ---
 title: 'Tenants'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'tenants/'
 eleventyNavigation:
     key: Tenants
@@ -50,16 +50,16 @@ eleventyNavigation:
                     <img decoding="async" src="/assets/images/pay-application-fee.webp" alt="pay-application-fee" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
-            <li class="cs-item">
+        <!--    <li class="cs-item">
                 <a href="/utility-info" class="cs-link" target="_blank">
                     <h3 class="cs-h3"><span class="cs-span">Utility</span> Info</h3>
-                </a>
+                </a> 
                 <picture class="cs-background">
                     <source media="(max-width: 600px)" srcset="/assets/images/water-utility.webp">
                     <source media="(min-width: 601px)" srcset="/assets/images/water-utility.webp">
                     <img decoding="async" src="/assets/images/water-utility.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
-            </li>
+            </li>-->
             <li class="cs-item">
                 <a href="/rentals" class="cs-link" target="_blank">
                     <h3 class="cs-h3"><span class="cs-span">Apply For</br></span>A Rental</h3>
