--- a/src/content/pages/blog.html
+++ b/src/content/pages/blog.html
@@ -1,7 +1,7 @@
 ---
 title: 'Blog | Code Stitch Web Designs'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'blog/'
 eleventyNavigation:
     key: Blog
