--- a/src/content/pages/rentals.html
+++ b/src/content/pages/rentals.html
@@ -1,7 +1,7 @@
 ---
 title: 'Rentals'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'rentals/'
 eleventyNavigation:
     key: Rentals
