--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,7 +1,7 @@
 ---
 title: 'Reviews'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'reviews/'
 eleventyNavigation:
     key: Reviews
@@ -25,9 +25,7 @@ eleventyNavigation:
     <section id="reviews">
         <div class="container">
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-                </picture>
+
                 <p>
                     Ken and Cindi have been my property managers for almost 9 years. They clearly communicate with me and my tenants. They are very accommodating with alternative communication as I have been overseas for 3 of those years.
                 </p>
@@ -39,9 +37,6 @@ eleventyNavigation:
                 </div>
             </div>
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-                </picture>
                 <p>
                     A very PROFESSIONAL, responsive, and HONEST company. Every employee that I have worked with has proved they deserve my business. This is a company that will protect your interests! Strongly recommend especially if you want to live or rent in the wonderful Estrella Mountain Ranch community.                </p>
                 <div class="star-group">
@@ -51,22 +46,14 @@ eleventyNavigation:
                 </div>
             </div>
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-                </picture>
                 <p>
                     Our experience as landlords with SunSeeker has been easy and straightforward. Ken has always been extremely responsive. Everything from the listing to tenancy has so far been smooth with no issues. They just take care of things, and I find I completely forget I own a home I'm leasing out.
                 </p>
                 <div class="star-group">
-                    <span class="name">Real Review by Rental Owner<span class="desc">Posted on Google</span></span>                    <picture>
-                        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
+                    <span class="name">Real Review by Rental Owner<span class="desc">Posted on Google</span></span>                    
                 </div>
             </div>
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
-                </picture>
                 <p>
                     Ken and Cindi have been great. We originally tried renting our home through two other agencies and both failed. Ken and Cindi came through quickly and professionally. I have received email responses to my questions very quickly and at just about any hour of the day. I recommended them to my in-laws recently and they used them to find a renter for their home in Buckeye. The home was rented within a matter of days and my in-laws have had nothing but stellar things to say about Ken and Cindi. We currently have them managing two homes for us in Buckeye and could not be happier.
                 </p>
@@ -77,22 +64,14 @@ eleventyNavigation:
                 </div>
             </div>
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-                </picture>
                 <p>
                     Ken and Cindi are our property managers for our home in Pebblecreek. We have been so pleased with working with them. They always respond promptly to any phone messages, email messages, or phone calls. They did a great job finding a couple to rent our home and did a great job of making sure they would be a good fit. When we flew down to our property to get it ready for rental they came over to walk through the property with us and made suggestions that were very helpful. They also have had recommendations for who to use for taking care of our fountain and other aspects of our home. It has really put our minds at ease to have Ken and Cindi managing our property for us.We recommend them highly!
                 </p>
                 <div class="star-group">
-                    <span class="name">Real Review by Rental Owner<span class="desc">Posted on Google</span></span>                    <picture>
-                        <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
-                    </picture>
+                    <span class="name">Real Review by Rental Owner<span class="desc">Posted on Google</span></span>                    
                 </div>
             </div>
             <div class="review">
-                <picture>
-                    <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
-                </picture>
                 <p>
                     Ken, Cindy and their VERY PROFESSIONAL Team at SunSeeker are EXACTLY what one wants in a Property Management company. On a scale of 1 to 10, we would rate them a 12!!! From our very first phone conversation 7 years ago, their commitment to excellence has been demonstrated ever since. They carefully vetted tenants for our PebbleCreek house. They handled any maintenance issues quickly and cheerfully for both ourselves and for our tenants. As the property owner, we received detailed monthly accounting immediately after each month closed. They handle all revenues, monthly expenses, special Arizona taxes and year-end documentation for tax and expense records.
                     SunSeeker makes owning and renting a house in Goodyear a breeze!
