--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -1,7 +1,7 @@
 ---
 title: 'Sitemap'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'sitemap/'
 eleventyNavigation:
     key: Sitemap
@@ -35,17 +35,13 @@ eleventyNavigation:
 <section id="content-page-1533">
     <div class="cs-container">
         <div class="cs-image-group">
-            <!--Flower-->
-            <img class="cs-flower" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/flower-graphic.svg" alt="flower" loading="lazy" decoding="async" height="148" width="153">
             <picture class="cs-background">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/interior-kid.jpg">
+                <source media="(max-width: 600px)" srcset="/assets/images/sitemap.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/interior-kid.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/interior-kid.jpg" alt="kid" width="522" height="540">
+                <source media="(min-width: 601px)" srcset="/assets/images/sitemap.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/sitemap.webp" alt="sitemap" width="522" height="540">
             </picture>
-            <!--Floating Blob-->
-            <img class="cs-floater" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/day-care-events-left.svg" alt="graphic" loading="lazy" decoding="async" height="710" width="690">
         </div>
         <div class="cs-content">
             <h1 class="cs-title">Useful Links</h1>
@@ -78,7 +74,7 @@ eleventyNavigation:
                 <li><a href="#">Tempe, AZ</a></li>
                 <li><a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank">Tenant Portal</a></li>
                 <li><a href="/tenants">Tenants Page</a></li>
-                <li><a href="/utility-info">Utility Info</a></li>
+           <!--     <li><a href="/utility-info">Utility Info</a></li> -->
                 <li><a href="/vendors">Vendors Page</a></li>
                 <li><a href="https://www.dropbox.com/request/yX4yL4sUaGVCRtaGlhH7" target="_blank">Vendors Submit Invoices Here</a></li>
                 <li><a href="https://sunseeker.appfolio.com/oportal/users/log_in" target="_blank">View Statements</a></li>
