--- a/src/content/pages/utility-info.html
+++ b/src/content/pages/utility-info.html
@@ -1,7 +1,7 @@
 ---
 title: 'Utility Info'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'utility-info/'
 eleventyNavigation:
     key: Utility Info
