--- a/src/content/pages/vendors.html
+++ b/src/content/pages/vendors.html
@@ -1,7 +1,7 @@
 ---
 title: 'Vendors'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'vendors/'
 eleventyNavigation:
     key: Vendors
