--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 title: 'Contact'
-description: 'Meta description for the page'
+description: 'Contact SunSeeker Rentals to speak with a property management expert. Call, email, or schedule a consultation—we're here to help.'
 preloadImg: '/assets/images/map.png'
 permalink: 'contact/'
 ---
