--- a/src/content/pages/owners.html
+++ b/src/content/pages/owners.html
@@ -1,6 +1,6 @@
 ---
 title: 'Owners'
-description: 'Meta description for the page'
+description: 'Property owners can log in to view statements, track performance, and access important documents through the SunSeeker Rentals owner portal'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'owners/'
 eleventyNavigation:
