--- a/src/content/pages/rentals.html
+++ b/src/content/pages/rentals.html
@@ -1,6 +1,6 @@
 ---
 title: 'Rentals'
-description: 'Meta description for the page'
+description: 'Browse available rental homes from SunSeeker Rentals. View current listings, check availability, and apply online through our secure portal.'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'rentals/'
 eleventyNavigation:
