--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,6 +1,6 @@
 ---
 title: 'Reviews'
-description: 'Meta description for the page'
+description: 'See what real property owners are saying about SunSeeker Rentals. Read verified 5-star reviews and learn why landlords trust our property management team.'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'reviews/'
 eleventyNavigation:
