--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -1,6 +1,6 @@
 ---
 title: 'Sitemap'
-description: 'Meta description for the page'
+description: 'Quickly find links to every page on the SunSeeker Rentals website, including rentals, owner tools, tenant resources, and contact information.'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'sitemap/'
 eleventyNavigation:
