--- a/src/content/pages/tenants.html
+++ b/src/content/pages/tenants.html
@@ -1,6 +1,6 @@
 ---
 title: 'Tenants'
-description: 'Meta description for the page'
+description: 'Access the tenant portal, apply for a rental, or pay application fees. SunSeeker Rentals makes renting easy with fast support and online tools.'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'tenants/'
 eleventyNavigation:
