--- a/src/content/pages/vendors.html
+++ b/src/content/pages/vendors.html
@@ -1,6 +1,6 @@
 ---
 title: 'Vendors'
-description: 'Meta description for the page'
+description: 'Vendors working with SunSeeker Rentals can submit invoices securely online. Follow our file naming format and upload directly through our portal.'
 preloadImg: '/assets/images/cabinets2.webp'
 permalink: 'vendors/'
 eleventyNavigation:
