--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
 title: 'About'
-description: 'Meta description for the page'
+description: 'Discover why SunSeeker Rentals is a trusted property management company—transparent pricing, no upfront fees, and dedicated, local service.'
 preloadImg: '/assets/images/why-us.webp'
 permalink: 'about/'
 eleventyNavigation:
