changed index meta description

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: 'Home'
+title: 'Home | SunSeeker Rentals | Goodyear Arizona'
 description: 'SunSeeker Rentals provides full-service property management with transparent pricing, no cancellation fees, and expert care for your rental home.'
 preloadImg: '/assets/images/landing.webp'
 permalink: '/'
