fix parsing error on line 56 and removed the comma and f

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@ eleventyNavigation:
                     {% if client.address.state %},
                         "addressRegion": "{{ client.address.state }}"
                     {% endif %}
-                    {% if client.address.zip %},F
+                    {% if client.address.zip %}
                         "postalCode": "{{ client.address.zip }}"
                     {% endif %}
                     {% if client.address.country %},
