--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 title: 'Contact'
 description: 'Contact SunSeeker Rentals to speak with a property management expert. Call, email, or schedule a consultation—we're here to help.'
-preloadImg: '/assets/images/map.png'
+preloadImg: '/assets/images/map.webp'
 permalink: 'contact/'
 ---
 
