--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@ eleventyNavigation:
     <!-- JSON Schema Markup -->
     <script type="application/ld+json">
         {
-            "@context": "http://schema.org",
+            "@context": "https://schema.org",
             "@type": "LocalBusiness",
             "name": "{{ client.name }}",
             {% if preloadImg %}"image": "{{ preloadImg }}",{% endif %}
