--- a/src/index.html
+++ b/src/index.html
@@ -34,42 +34,31 @@ eleventyNavigation:
     </script>
 
     <!-- JSON Schema Markup -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "LocalBusiness",
-            "name": "{{ client.name }}",
-            {% if preloadImg %}"image": "{{ preloadImg }}",{% endif %}
-            {% if client.phoneFormatted %}"telephone": "{{ client.phoneFormatted }}",{% endif %}
-            {% if client.email %}"email": "{{ client.email }}",{% endif %}
-            {% if client.address %}
-                "address": {
-                    "@type": "PostalAddress"{% if client.address.lineOne %},
-                        "streetAddress": "{{ client.address.lineOne }}{% if client.address.lineTwo %}, {{ client.address.lineTwo }}{% endif %}"
-                    {% endif %}
-                    {% if client.address.city %},
-                        "addressLocality": "{{ client.address.city }}"
-                    {% endif %}
-                    {% if client.address.state %},
-                        "addressRegion": "{{ client.address.state }}"
-                    {% endif %}
-                    {% if client.address.zip %}
-                        "postalCode": "{{ client.address.zip }}"
-                    {% endif %}
-                    {% if client.address.country %},
-                        "addressCountry": "{{ client.address.country }}"
-                    {% endif %}
-                },
-            {% endif %}
-            {% if client.domain and page.url %}"url": "{{ client.domain }}{{ page.url }}",{% endif %}
-            {% if client.socials %}
-                "sameAs": [{% for platform, url in client.socials %}
-                        {% if not loop.first %},{% endif %}
-                        "{{ url }}"
-                    {% endfor %}]
-            {% endif %}
-        }
-    </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "{{ client.name }}",
+  "image": "{{ preloadImg }}",
+  "telephone": "{{ client.phoneFormatted }}",
+  "email": "{{ client.email }}",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "{{ client.address.lineOne }}{% if client.address.lineTwo %}, {{ client.address.lineTwo }}{% endif %}",
+    "addressLocality": "{{ client.address.city }}",
+    "addressRegion": "{{ client.address.state }}",
+    "postalCode": "{{ client.address.zip }}",
+    "addressCountry": "{{ client.address.country }}"
+  },
+  "url": "{{ client.domain }}{{ page.url }}"{% if client.socials and client.socials|length > 0 %},
+  "sameAs": [{% for platform, url in client.socials %}
+    {% if not loop.first %},{% endif %}
+    "{{ url }}"
+  {% endfor %}]
+  {% endif %}
+}
+</script>
+
 {% endblock %}
 
 {% block body %}
