--- a/src/content/pages/home-watch.html
+++ b/src/content/pages/home-watch.html
@@ -91,46 +91,76 @@ permalink: 'home-watch/'
         <div class="cs-content">
             <span class="cs-topper">How We Help</span>
             <h2 class="cs-title">What's Included With Our Services</h2>
-            <p class="cs-text">We can help you design your project and develop a comprehensive plan to ensure that it meets your specific needs and requirements. Our team of architects and engineers will work closely with you to create a design that is both functional and aesthetically pleasing.</p>
-                                
+            <!-- Replaced cs-text with custom services list -->
+            <ul id="list-1405" class="cs-ul">
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Thorough interior and exterior walk-through inspections.
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Detailed photo documentation of property condition (inside and out).
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Running all faucets, showers, and flushing toilets to keep plumbing in good condition.
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Emailing a comprehensive visit report with photos to the homeowner after each visit.
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Immediate notification if any issues are found.
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Coordinating quotes from trusted vendors with 28+ years of experience.
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Assistance working directly with vendors to resolve any issues.
+                </li>
+            </ul>
             <a href="" class="cs-button-solid" aria-label="learn more about us">Learn More</a>
         </div>
         <div class="cs-wrapper">
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <h3 class="cs-h3">
-                        Workers
+                        Availability
                     </h3>
-                    <span class="cs-number">500+</span>
+                    <span class="cs-number">24/7</span>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida, ex in commodo euismod, justo nisi bibendum libero,
+                        Always ready to respond to any property concerns, emergencies, or requests—anytime, day or night.
                     </p>
                 </li>
                 <li class="cs-item">
                     <h3 class="cs-h3">
-                        Experience
+                        Years of Experience
                     </h3>
-                    <span class="cs-number">12 Years</span>
+                    <span class="cs-number">28+ Years</span>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida, ex in commodo euismod, justo nisi bibendum libero,
+                        Extensive industry experience providing peace of mind and trusted care for your property.                    
                     </p>
                 </li>
                 <li class="cs-item">
                     <h3 class="cs-h3">
-                        Current Projects
+                        Homes Watched
                     </h3>
-                    <span class="cs-number">100+</span>
+                    <span class="cs-number">450</span>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida, ex in commodo euismod, justo nisi bibendum libero,
+                        A proven track record of safeguarding hundreds of properties in the community.                    
                     </p>
                 </li>
                 <li class="cs-item">
                     <h3 class="cs-h3">
-                        Awards Winner
+                        Google Reviews
                     </h3>
-                    <span class="cs-number">200+</span>
+                    <span class="cs-number">140+ Positive Reviews</span>
                     <p class="cs-item-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed gravida, ex in commodo euismod, justo nisi bibendum libero,
+                        Highly rated for reliability and exceptional service by satisfied homeowners.
+
                     </p>
                 </li>
             </ul>
