added homewatch page and corrected stats

--- a/src/content/pages/home-watch.html
+++ b/src/content/pages/home-watch.html
@@ -1,6 +1,6 @@
 ---
 title: 'Home Watch Services'
-description: ''
+description: 'Home watch services in Goodyear & West Valley. Scheduled inspections, photo updates, and local experts to keep your vacant property safe and secure.'
 preloadImg: '/assets/images/map.webp'
 permalink: 'home-watch/'
 ---
@@ -25,7 +25,7 @@ permalink: 'home-watch/'
             Scheduled visits, thorough inspections, and real-time photo updates for your vacant property’s security.
 
         </p>
-        <a href="" class="cs-button-solid">Request A Free Consultation</a>
+        <a href="#cs-contact-486" class="cs-button-solid">Request A Free Consultation</a>
     </div>
 
     <!-- Background Image -->
@@ -57,7 +57,7 @@ permalink: 'home-watch/'
             </picture>
             <h2 class="cs-title">Experienced Professionals</h2>
             <p class="cs-text">
-                Benefit from years of hands-on expertise in home watch and property management services. Your property is cared for by skilled professionals you can trust.
+                Benefit from our years of hands-on expertise handling vacant homes. We gaurantee your property is cared for by skilled professionals you can trust.
             </p>
         </li>
                 <li class="cs-item">
@@ -122,7 +122,7 @@ permalink: 'home-watch/'
                     Assistance working directly with vendors to resolve any issues.
                 </li>
             </ul>
-            <a href="" class="cs-button-solid" aria-label="learn more about us">Learn More</a>
+        <!--    <a href="" class="cs-button-solid" aria-label="learn more about us">Learn More</a> -->
         </div>
         <div class="cs-wrapper">
             <ul class="cs-card-group">
@@ -139,7 +139,7 @@ permalink: 'home-watch/'
                     <h3 class="cs-h3">
                         Years of Experience
                     </h3>
-                    <span class="cs-number">28+ Years</span>
+                    <span class="cs-number">28+</span>
                     <p class="cs-item-text">
                         Extensive industry experience providing peace of mind and trusted care for your property.                    
                     </p>
@@ -157,7 +157,7 @@ permalink: 'home-watch/'
                     <h3 class="cs-h3">
                         Google Reviews
                     </h3>
-                    <span class="cs-number">140+ Positive Reviews</span>
+                    <span class="cs-number">140+</span>
                     <p class="cs-item-text">
                         Highly rated for reliability and exceptional service by satisfied homeowners.
 
@@ -178,36 +178,37 @@ permalink: 'home-watch/'
             <span class="cs-topper">Why clients trust us</span>
             <h2 class="cs-title">Words From Our Customers</h2>
             <p class="cs-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit dolor volutpat porttitor sagittis nunc nisl. Sagittis sit pellentesque gravida viverra. Leo ut sed euismod tortor risus et. Ornare non neque, leo, ornare. Lorem ipsum dolor sit amet.
-            </p>
+Homeowners trust our Home Watch services for our attention to detail, honest communication, and commitment to their peace of mind. Our clients regularly share how our thorough inspections, timely updates, and personal approach help them feel confident that their property is safe and well cared for while they’re away. Read their experiences below to see what sets us apart.            
+</p>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
                 <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="profile" width="116" height="20">
-                <span class="cs-name">John Doe</span>
-                <span class="cs-desc">Texas</span>
+                <span class="cs-name">Real Review by Property Owner</span>
+                <span class="cs-desc">Posted on Google</span>
                 <p class="cs-item-text">
-                    Proin massa eros, quis fringilla sagittis. Euismod scelerisque varius sed nec consequat, turpis.
+                    A very PROFESSIONAL, responsive, and HONEST company. Every employee that I have worked with has proved they deserve my business. This is a company that will protect your interests! Strongly recommend especially if you want to live or rent in the wonderful Estrella Mountain Ranch community.
                 </p>
             </li>
             <li class="cs-item">
                 <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="profile" width="116" height="20">
-                <span class="cs-name">Jane Smith</span>
-                <span class="cs-desc">California</span>
+                <span class="cs-name">Real Review by Property Owner</span>
+                <span class="cs-desc">Posted on Google</span>
                 <p class="cs-item-text">
-                    Proin massa eros, quis fringilla sagittis. Euismod scelerisque varius sed nec consequat, turpis.
+Working with Ken & Cindy Ellis of SunSeeker Rentals has been an exceptionally easy and highly positive experience! I would recommend them, without hesitation, to anyone needing their expertise. This is a very straightforward business with years of experience. Response time to questions or concerns is impressively fast and professionally handled. Prices are fair and competitive. Questions are answered honestly and completely. I have also had timely and excellent help from any of the service providers that Ken has recommended. SunSeeker Rentals is just an excellent business!
                 </p>
             </li>
             <li class="cs-item">
                 <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="profile" width="116" height="20">
-                <span class="cs-name">Thomas Madden</span>
-                <span class="cs-desc">Texas</span>
+                <span class="cs-name">Real Review by Property Owner</span>
+                <span class="cs-desc">Posted on Google</span>
                 <p class="cs-item-text">
-                    Proin massa eros, quis fringilla sagittis. Euismod scelerisque varius sed nec consequat, turpis.
+Since I live out-of-state, communication with the rental company is vital. Ken and Cindy have been amazing. They keep me up-to-date on everything that happens with my property.
+I can't imagine another company who could be more responsive and communicative.
                 </p>
             </li>
         </ul>
-        <a aria-label="read more reviews" href="" class="cs-button-solid">Read More</a>
+            <a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank" class="cs-button-solid">Read More Google Reviews</a>
     </div>
 </section>
                                 
@@ -219,18 +220,17 @@ permalink: 'home-watch/'
 <section id="cs-contact-486">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Talk to us about your <span class="cs-color">garden plan!</span></h2>
+            <h2 class="cs-title">Get In Touch About  <span class="cs-color">Home Watch Services</span></h2>
             <p class="cs-text">
-                We would love to hear about your project and discuss how we can help. Please fill the form on the right side to schedule a call or discussion and meeting on the your convenient time.
-            </p>
-            <span class="cs-heading">Any problem about your booking?</span>
-            <span class="cs-heading">You can contact us on :</span>
-            <a href="tel:219-555-4545" class="cs-link">(219) 555-4545</a>
-            <a href="mailto:info@codestitch.com" class="cs-link">info@codestitch.com</a>
+Interested in our Home Watch services or have questions about how we can help protect your vacant property? Fill out the form below and we’ll reach out to discuss your needs, answer your questions, and provide more information about our service options.       
+     </p>
+            <span class="cs-heading">Prefer to speak with us directly?</span>
+            <a href="tel:623-262-8584" class="cs-link">Phone: (623) 262-8584</a>
+            <a href="mailto:info@codestitch.com" class="cs-link">Email: kolby.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
         <form id="cs-form-486" name="Contact Form" method="post">
-            <h3 class="cs-h3">Schedule Consult</h3>
+            <h3 class="cs-h3">Request More Information</h3>
             <label class="cs-label">
                 Name
                 <input class="cs-input" required type="text" id="name-486" name="name" placeholder="Name">
@@ -244,18 +244,15 @@ permalink: 'home-watch/'
                 <input class="cs-input" required type="text" id="email-486" name="email" placeholder="Email">
             </label>
             <label class="cs-label">
-                How Did You Find Us
-                <input class="cs-input" type="text" id="find-486" name="find-us" placeholder="How did you find us?">
+                Address or Approximate Location
+                <input class="cs-input" type="text" id="location-486" name="location" placeholder="e.g. Full address or nearest major cross streets">
             </label>
-            <label class="cs-label cs-label-message">
-                What do you need help with?
-                <select name="cars" id="cs-select-486">
-                    <option value="full renovation">Full Renovation</option>
-                    <option value="sod install">Sod Install</option>
-                    <option value="yard cleanup">Yard Cleanup</option>
-                    <option value="landscape design">Landscape Design</option>
-                </select>
+
+            <label class="cs-label">
+                How long do you need Home Watch services?
+                <input class="cs-input" type="text" id="duration-486" name="duration" placeholder="e.g. 2 weeks, 3 months, ongoing">
             </label>
+
             <button class="cs-button-solid cs-submit" type="submit">Book a Consult</button>
         </form>
     </div>
