tweaked landing page video

--- a/src/index.html
+++ b/src/index.html
@@ -160,7 +160,7 @@ eleventyNavigation:
                 <span class="cs-desc">Cancellation Fees</span>
             </li>
         </ul>
-        <a href="https://www.youtube.com/watch?v=Tv4xwtJt1qo&embeds_referring_euri=https%3A%2F%2Fwww.valleyofthesunrentals.com%2F&source_ve_path=Mjg2NjY" target="_blank" class="cs-big-link">
+        <a href="https://www.youtube.com/watch?v=54HDhyOZI8k" target="_blank" class="cs-big-link">
             <!--Background Image-->
             <picture class="cs-background">
                 <source media="(min-width: 1024px)" srcset="/assets/images/thumbnail.webp">
