--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -85,16 +85,18 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
 <section id="why-2392">
 	<div class="cs-container">
 		<div class="cs-wrapper">
-<a href="https://www.youtube.com/watch?v=54HDhyOZI8k" target="_blank" rel="noopener" class="cs-picture-link" aria-label="Watch our video on YouTube">
-  <div class="cs-picture">
-      <picture>
-          <source media="(max-width: 600px)" srcset="/assets/images/thumbnail.webp" />
-          <source media="(min-width: 601px)" srcset="/assets/images/thumbnail.webp" />
-          <img loading="lazy" decoding="async" src="/assets/images/thumbnail-m.webp" alt="people" width="586" height="690" />
-      </picture>
-      <img class="cs-link-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Stats/play-yellow.svg" alt="play icon" width="110" height="110">
-  </div>
-</a>
+        <a href="https://www.youtube.com/watch?v=54HDhyOZI8k" target="_blank" class="cs-big-link">
+            <!--Background Image-->
+            <picture class="cs-background">
+                <source media="(min-width: 1024px)" srcset="/assets/images/thumbnail.webp">
+                <source media="(min-width: 601px)" srcset="/assets/images/thumbnail.webp">
+                <source media="(max-width: 600px)" srcset="/assets/images/thumbnail-m.webp">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/thumbnail.webp" alt="meeting" width="1280" height="580">
+            </picture>
+            <!--Play Icon-->
+            <img class="cs-link-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Stats/play-yellow.svg" alt="play icon" width="110" height="110">
+        </a>
+
 
 
 			<div class="cs-content">
