--- a/src/content/pages/buckeye-property-management.html
+++ b/src/content/pages/buckeye-property-management.html
@@ -1,14 +1,14 @@
 ---
-title: 'Property Management Services in Goodyear'
-description: 'Property management services in Goodyear & West Valley. Full-service leasing, inspections, maintenance, and responsive local experts for your rental property.'
-preloadImg: '/assets/images/pm-goodyear.webp'
-permalink: 'goodyear-property-management/'
+title: 'Property Management Services in Buckeye'
+description: 'Property management services in Buckeye & West Valley. Full-service leasing, inspections, maintenance, and responsive local experts for your rental property.'
+preloadImg: '/assets/images/pm-buckeye.webp'
+permalink: 'buckeye-property-management/'
 ---
 
 {% extends "layouts/base.html" %}
 
 {% block head %}
-    <link rel="stylesheet" href="/assets/css/goodyear-property-management.css">
+    <link rel="stylesheet" href="/assets/css/buckeye-property-management.css">
 {% endblock %}
 
 {% block body %}
@@ -20,18 +20,18 @@ permalink: 'goodyear-property-management/'
 
 <section id="hero-81">
     <div class="cs-container">
-        <h1 class="cs-title">Goodyear Property Management Made Simple</h1>
+        <h1 class="cs-title">Buckeye Property Management Made Simple</h1>
         <p class="cs-text">
-Full-service leasing, thorough inspections, and responsive local experts for your Goodyear rental property.
+Full-service leasing, thorough inspections, and responsive local experts for your Buckeye rental property.
         </p>
         <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
     </div>
 
     <!-- Background Image -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/pm-goodyear-m.webp">
-        <source media="(min-width: 601px)" srcset="/assets/images/pm-goodyear.webp">
-        <img fetchpriority="high" decoding="async" src="/assets/images/pm-goodyear.webp" alt="goodyear" width="2250" height="1500" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/pm-buckeye-m.webp">
+        <source media="(min-width: 601px)" srcset="/assets/images/pm-buckeye.webp">
+        <img fetchpriority="high" decoding="async" src="/assets/images/pm-buckeye.webp" alt="Buckeye" width="2250" height="1500" aria-hidden="true">
     </picture>
 </section>
 
@@ -70,9 +70,9 @@ Regular interior and exterior inspections to protect your investment and keep te
             <picture class="cs-icon">
                 <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/gear.svg" alt="appliance" width="52" height="52" aria-hidden="true">
             </picture>
-            <h2 class="cs-title">Local Goodyear Experts</h2>
+            <h2 class="cs-title">Local Buckeye Experts</h2>
             <p class="cs-text">
-Based in Goodyear and serving the West Valley, we understand the local rental market and community.
+Based in Buckeye and serving the West Valley, we understand the local rental market and community.
             </p>
         </li>
     </ul>
@@ -150,7 +150,7 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
 				<div class="cs-flex">
 					<h3 class="cs-h3">28+ Years of Experience</h3>
 					<p class="cs-item-text">
-                        Trusted, experienced property managers serving Goodyear and the West Valley.
+                        Trusted, experienced property managers serving Buckeye and the West Valley.
 					</p>
 				</div>
 			</li>
@@ -187,7 +187,7 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
             <span class="cs-topper">Why clients trust us</span>
             <h2 class="cs-title">Words From Our Customers</h2>
 <p class="cs-text">
-Property owners in Goodyear and the West Valley trust our property management team for responsive communication, local market expertise, and consistent results. Read what our clients say about our leasing, maintenance, and personal attention.
+Property owners in Buckeye and the West Valley trust our property management team for responsive communication, local market expertise, and consistent results. Read what our clients say about our leasing, maintenance, and personal attention.
 </p>
 
         </div>
@@ -232,7 +232,7 @@ I can't imagine another company who could be more responsive and communicative.
         <div class="cs-content">
             <h2 class="cs-title">Get In Touch About <span class="cs-color">Property Management</span></h2>
             <p class="cs-text">
-Interested in our property management services or want to discuss your rental property in Goodyear or the West Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
+Interested in our property management services or want to discuss your rental property in Buckeye or the West Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
             </p>
             <span class="cs-heading">Prefer to speak with us directly?</span>
             <a href="tel:623-262-8584" class="cs-link">Phone: (623) 262-8584</a>
